Persistent Data Causes Render Errors for Motion Blur #96822

Closed
opened 2022-03-28 00:23:53 +02:00 by Ethan-Hall · 29 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79

Blender Version
Broken: version: 3.1.1 Release Candidate, branch: master, commit date: 2022-03-24 13:38, hash: fb2cb0324a
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e
Broken: version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: dc2d180181
Broken: version: 2.93.8, branch: master, commit date: 2022-02-01 21:14, hash: 09da7f489a
Worked: 2.92
Worked: version: 2.83.18, branch: master, commit date: 2021-09-28 14:02, hash: 00b0253c46

Caused by cedd8b8c56

Short description of error
When using persistent data and motion blur, objects render black on the frame where they accelerate from rest,
It occurs when rendering Cycles on CPU as well as GPU.

Frame Render Result
1 {F12952892 size=full}
2 {F12952894 size=full}
3 {F12952896 size=full}

First reported here #96818 and here #92208.

Exact steps for others to reproduce the error
Render frame 1, then 2, then 3. Turn off persistent data and try again. Observe the difference.
#96822.blend

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79 **Blender Version** Broken: version: 3.1.1 Release Candidate, branch: master, commit date: 2022-03-24 13:38, hash: `fb2cb0324a` Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` Broken: version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: `dc2d180181` Broken: version: 2.93.8, branch: master, commit date: 2022-02-01 21:14, hash: `09da7f489a` Worked: 2.92 Worked: version: 2.83.18, branch: master, commit date: 2021-09-28 14:02, hash: `00b0253c46` Caused by cedd8b8c56 **Short description of error** When using persistent data and motion blur, objects render black on the frame where they accelerate from rest, It occurs when rendering Cycles on CPU as well as GPU. |Frame|Render Result| | -- | -- | |1|{[F12952892](https://archive.blender.org/developer/F12952892/0001.png) size=full}| |2|{[F12952894](https://archive.blender.org/developer/F12952894/0002.png) size=full}| |3|{[F12952896](https://archive.blender.org/developer/F12952896/0003.png) size=full}| First reported here #96818 and here #92208. **Exact steps for others to reproduce the error** Render frame 1, then 2, then 3. Turn off persistent data and try again. Observe the difference. [#96822.blend](https://archive.blender.org/developer/F12952899/T96822.blend)
Author

Added subscriber: @Ethan-Hall

Added subscriber: @Ethan-Hall

#97166 was marked as duplicate of this issue

#97166 was marked as duplicate of this issue

#91487 was marked as duplicate of this issue

#91487 was marked as duplicate of this issue

#92208 was marked as duplicate of this issue

#92208 was marked as duplicate of this issue
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm the issue with OptiX in latest master

System Information
Operating system: Linux-5.16.0-5-amd64-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54
Blender version: 3.2.0 Alpha, branch: master, commit date: 2022-03-27 11:25, hash: e2e4c1daaa

I can confirm the issue with OptiX in latest master **System Information** Operating system: Linux-5.16.0-5-amd64-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54 Blender version: 3.2.0 Alpha, branch: master, commit date: 2022-03-27 11:25, hash: `e2e4c1daaa`

Added subscriber: @EAGLE-LENS

Added subscriber: @EAGLE-LENS
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58

Added subscriber: @Lt-Knb

Added subscriber: @Lt-Knb

Is #92208 the same issue? Also #91487 looks related as well

Is #92208 the same issue? Also #91487 looks related as well
Author

@Lt-Knb I think you are right, it does look like the same issue as #92208.

The issue looks like it only occurs on the first frame when a motion blurred object accelerates from stationary.

@Lt-Knb I think you are right, it does look like the same issue as #92208. The issue looks like it only occurs on the first frame when a motion blurred object accelerates from stationary.
Ethan-Hall changed title from Persistent Data Causes Render Errors to Persistent Data Causes Render Errors for Motion Blur 2022-03-29 01:19:48 +02:00
Author

@Lt-Knb Thanks to your comment, I was able to identify the issue and create a minimal example. 🙂

@Lt-Knb Thanks to your comment, I was able to identify the issue and create a minimal example. 🙂
Author

Added subscriber: @mltx

Added subscriber: @mltx
Author

I went back to read the comments on #92208, and it looks like @mltx also reached the same conclusion.

I went back to read the comments on #92208, and it looks like @mltx also reached the same conclusion.
Author

Added subscriber: @iss

Added subscriber: @iss
Author

@iss I am poking you since you were looking into #92208.

@iss I am poking you since you were looking into #92208.

@Ethan-Hall Glad I could help :)

@Ethan-Hall Glad I could help :)

Seems to be same issue as #92208, but this report seems to contain better repro case, so will merge other report here.

Seems to be same issue as #92208, but this report seems to contain better repro case, so will merge other report here.

Added subscriber: @otherivan

Added subscriber: @otherivan

Added subscriber: @poqpoq

Added subscriber: @poqpoq
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

#95404 (Persistent Data causes the Image Editor to not update during rendering + pixel glitches in topper pixel lines) and #91487 (Persistent Data & Motion Blur cause some frames to look weird when rendering animation in Cycles) seem related

#95404 (Persistent Data causes the Image Editor to not update during rendering + pixel glitches in topper pixel lines) and #91487 (Persistent Data & Motion Blur cause some frames to look weird when rendering animation in Cycles) seem related
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

I actually think there might be more duplicates out there.

I bisected this and this is caused by cedd8b8c56.
And we now have a very simple repro case (other reports had large files and it was never really clear which frame failed, the file from this report is super clear).
And even though the bug is a bit older now I will dare setting this to High priority (since it can be a pain if you run into it with no clear way to work around).

@brecht: mind checking?

I actually think there might be more duplicates out there. I bisected this and this is caused by cedd8b8c56. And we now have a very simple repro case (other reports had large files and it was never really clear which frame failed, the file from this report is super clear). And even though the bug is a bit older now I will dare setting this to High priority (since it can be a pain if you run into it with no clear way to work around). @brecht: mind checking?
Member

Added subscriber: @Gyoo18

Added subscriber: @Gyoo18
Member

Added subscriber: @costa

Added subscriber: @costa

This issue was referenced by 94205e1d02

This issue was referenced by 94205e1d029511b2ab714a53d84de8c50a70fb39

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-05-03 22:35:01 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96822
No description provided.