Fix T96822: Cycles motion blur + persistent data not updating properly

At the frame before/after an object starts moving, it's transform may not be
modified but its motion would be and requires an update.